Archive2/a9/c8ceab0f17a395/output
main.cpp:10:8: error: template argument 'std::is_same<decltype ((std::basic_string<char>() + declval<T>())), std::basic_string<char> >::value' involves template parameter(s)
 struct can_concat<T,std::is_same<decltype( std::string() + std::declval<T>()), std::string>::value>
        ^
main.cpp: In function 'int main()':
main.cpp:19:10: warning: unused variable 'x' [-Wunused-variable]
     bool x= can_concat<int()>::value;
          ^
